# sample-travel-agent

./: .env.example  Makefile  PRODUCTION.md  README.md  pyproject.toml  skills-lock.json
agent/: api.py  chat.py  loop.py  prompt.py  tools.py  tracing.py
evals/: __init__.py  cases.py  dataset.py  detectors.py  experiment.py  harness.py  judges.py  metrics.py  report.py  task.py  taxonomy.py
reports/: final.md  fix-1-prompt.md  fix-2-tools.md  fix-3-competitor.md
scripts/: generate_traffic.py
