[project]
name = "arize-fde-agent"
version = "0.1.0"
description = "A simple AI travel agent (CLI + FastAPI) built on the Anthropic API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic==0.116.0",
    "arize-phoenix-client==2.13.0",
    "arize-phoenix-evals==3.1.1",
    "arize-phoenix-otel==0.16.1",
    "fastapi==0.139.0",
    "httpx==0.28.1",
    "openinference-instrumentation-anthropic==1.0.6",
    "python-dotenv==1.2.2",
    "uvicorn[standard]==0.51.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "evals"]
